# audiobook-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  TODO.md  chapters-ffmpeg.py  chapters-mp4box.py  combine_cue.py  create-aac.sh  create-m4b-ffmpeg.sh  create-m4b-mp4box.sh  cue_to_ffmetadata.py  merge_flac.sh  process_audiobook.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  verify.yml
audiobook_tools/: __init__.py  __main__.py  cli.py  common.py  tui.py
audiobook_tools/audio/: encode.py  m4b.py  merge.py  probe.py
audiobook_tools/chapters/: _common.py  ffmpeg.py  mp3.py  mp4box.py
audiobook_tools/cli/: main.py  tui.py
audiobook_tools/core/: cue.py  processor.py
audiobook_tools/cue/: combiner.py  parser.py
audiobook_tools/tests/: test_basic.py  test_combine_cue.py  test_mp3_chapters.py  test_utils.py
audiobook_tools/utils/: audio.py  external.py  time.py
docs/: FOLD_IN_GENERATOR.md  LAUNCH.md
scripts/: verify.py
tests/: test_audio.py  test_chapters.py  test_cli.py  test_combine_cue.py  test_cue_parser.py  test_encode.py  test_external.py  test_integration.py  test_m4b.py  test_merge.py  test_mp3_chapters.py  test_probe.py  test_time.py  test_tui.py
tests/data/sample_mp3/: README.md
